--- a/lesson1/css/main.css
+++ b/lesson1/css/main.css
@@ -7,8 +7,12 @@ a {
   color: white;
 }
 
-img {
+img.wide {
   width: 100%;
+}
+
+img.tall {
+  height: 100%;
 }
 
 section {
@@ -17,6 +21,14 @@ section {
   border-style: solid;
   border-width: 0.5em;
   margin: 2em;
+}
+
+section.fullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 section.code {
@@ -71,4 +83,39 @@ ol {
 ul {
   font-size: 1.5em;
   font-weight: 300;
+}
+
+li {
+  padding: 0.5em;
+}
+
+div.forward {
+  font-size: 5em;
+  position: fixed;
+  top: 50%;
+  right: 0;
+  z-index: 99999;
+}
+
+div.back {
+  font-size: 5em;
+  position: fixed;
+  top: 50%;
+  z-index: 99999;
+}
+
+div.showallContainer {
+  text-align: center;
+  position: fixed;
+  bottom: 5%;
+  width: 100%;
+  z-index: 99999;
+}
+
+div.showall {
+  display: inline-block;
+  background-color: white;
+  color: rgba(95,166,255,1);
+  padding: 0.5em;
+  font-size: 1.5em;
 }
